# eden-smart-proxy

./: .env  .env.example  .eslintrc.json  .gitignore  .huskyrc  .lintstagedrc  CONTRIBUTING.md  Dockerfile  README.md  makefile  next-i18next.config.js  next.config.js  package.json  tsconfig.json
.github/workflows/: codeql-analysis.yml  publish-dev.yaml  publish-prod.yaml
contracts/: .gitignore  CMakeLists.txt  README.md  build.sh  docker_build.sh
contracts/docker/: builder.Dockerfile
contracts/eden/: CMakeLists.txt
contracts/eden/include/eden/: constants.hpp  eden.hpp  members.hpp  utils.hpp
contracts/eden/src/: eden.cpp  members.cpp
contracts/eden/src/actions/: members.cpp
contracts/myvoteeosdao/: CMakeLists.txt
contracts/myvoteeosdao/include/myvoteeosdao/: myvoteeosdao.hpp
contracts/myvoteeosdao/src/: myvoteeosdao.cpp
contracts/proxyfund/: CMakeLists.txt  README.md
contracts/proxyfund/include/: constants.hpp  fund.hpp
contracts/proxyfund/src/: fund.cpp
contracts/proxyfund/tests/: tests-fund.cpp
contracts/proxyfund/tests/include/: tester-base.hpp
contracts/proxyreward/: CMakeLists.txt  README.md
contracts/proxyreward/include/: accounts.hpp  constants.hpp  distribution.hpp  distributions.hpp  proxyreward.hpp  reward.hpp  utils.hpp  voter.hpp  voters.hpp
contracts/proxyreward/src/: accounts.cpp  distribution.cpp  distributions.cpp  proxyreward.cpp  reward.cpp  voter.cpp  voters.cpp
contracts/proxyreward/src/actions/: accounts.cpp  distribution.cpp  distributions.cpp  voter.cpp  voters.cpp
contracts/proxyreward/tests/: tests-proxyreward.cpp
contracts/proxyreward/tests/include/: tester-base.hpp
contracts/smartproxy/: CMakeLists.txt
contracts/smartproxy/include/: admin.hpp  communities.hpp  constants.hpp  smartproxy.hpp  voters.hpp
contracts/smartproxy/src/: admin.cpp  communities.cpp  smartproxy.cpp  voters.cpp
contracts/smartproxy/src/actions/: admin.cpp  vote.cpp
contracts/smartproxy/tests/: tests.cpp
contracts/smartproxy/tests/include/: tester-base.hpp
contracts/token/: CMakeLists.txt
k8s/: deployment.yml
k8s-dev/: deployment.yml  ingress.yml
k8s-pdn/: ingress.yml  service.yml  voter.cronjob.yml
public/locales/cn/: common.json
public/locales/en/: common.json
public/locales/es/: common.json
public/locales/ko/: common.json
src/: global.css  graphql.ts
src/@types/: context.ts  member.ts  ual.ts
src/components/: index.ts
src/components/AuthUAL/: index.tsx  styles.ts  useAuthUAL.hook.ts
src/components/BaseSnackbar/: index.tsx  style.ts
src/components/CountdownTimer/: index.tsx  styles.ts
src/components/CustomListItem/: index.tsx  styles.ts
src/components/DelegateButton/: index.tsx
src/components/Home/Body/: index.tsx  styles.ts
src/components/Home/Bottom/: index.tsx  styles.ts
src/components/Home/Head/: index.tsx  styles.ts
src/components/ImageLoad/: index.tsx
src/components/LanguageSelector/: index.tsx  styles.ts
src/components/Layout/: index.tsx  styles.ts
src/components/Layout/Container/: index.tsx
src/components/Layout/Footer/: index.tsx  styles.ts
src/components/Layout/Header/: index.tsx  routes.json  styles.ts
src/components/PopoverMessage/: index.tsx  styles.ts
src/components/SearchBar/: index.tsx  styles.ts
src/components/Sidebar/: About.svg.tsx  Delegator.svg.tsx  Logo.svg.tsx  Vote.svg.tsx  Voter.svg.tsx  index.tsx  styles.ts
src/components/SortComponent/: index.tsx  styles.ts
src/components/Spinner/: index.tsx  styles.ts
src/components/Vote/Body/: index.tsx  styles.ts
src/components/Vote/Head/: index.tsx  styles.ts
src/components/Voters/Body/: index.tsx  styles.ts
src/components/Voters/Head/: index.tsx  styles.ts
src/config/: index.ts  sdk.ts
src/config/analytics/: index.ts
src/config/constants/: bpjson.ts  electionRank.ts  footer.ts  homePage.ts  index.ts  socialMediaLink.ts
src/config/graphqlConfig/: index.ts
src/config/hostBill/: index.ts
src/config/i18n/: index.tsx
src/config/reCaptcha/: index.ts
src/config/seo/: index.ts
src/config/theme/: index.ts
src/config/wallet/: index.ts
src/context/: state.context.tsx
src/gql/: voters.gql.ts
src/hooks/: index.ts
src/hooks/fetch/: index.tsx
src/hooks/sizes/: index.tsx
src/hooks/useCountdown/: index.ts
src/hooks/useDebounce/: index.ts
src/hooks/useImageLoading/: index.tsx
src/hooks/useUAL/: index.tsx
src/interfaces/: index.ts  members.ts  ntf.ts
src/pages/: _app.tsx  _document.tsx  index.tsx  styles.ts
src/pages/about/: index.tsx  styles.ts
src/pages/api/: eosrate-api.ts
src/pages/delegator/: DelegatorActions.tsx  index.tsx  styles.ts
src/pages/vote/: index.tsx  styles.ts
src/pages/voters/: index.tsx  styles.ts
src/utils/: atomicassets.ts  bps.ts  eos.ts  eosio.ts  formatters.ts  genesis-eden.ts  index.ts  ipfs.ts  smart-proxy.ts
src/utils/analytics/: index.ts
src/utils/generate-api-urls/: index.ts
src/utils/i18n/: index.ts
src/utils/route/: index.ts
utils/: help.mk  meta.mk
voter/: Dockerfile  package.json
voter/src/: index.js
voter/src/config/: eos.config.js
voter/src/utils/: eos.util.js
